--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     </p>    
   </div>
   <a
-    href="https://github.com/jota-one/drosse/tree/master/packages/core" 
+    href="https://github.com/jota-one/drosse/#readme" 
     target="_blank"
     class="button icon-arrow-right"
   >
