added (not styled yet) a link to buymeacoffee.com

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,15 +31,23 @@
     <p>
       It comes out of the box with all the features you need to completely simulate
       your backend API, making it the best companion for any frontend developer 🤓
-    </p>    
+    </p>
   </div>
   <a
-    href="https://github.com/jota-one/drosse/tree/master#readme" 
+    href="https://github.com/jota-one/drosse/tree/master#readme"
     target="_blank"
     class="button icon-arrow-right"
   >
     Check the docs
   </a>
+</section>
+<section class="summary support">
+  <div class="intro-text">
+    Want to help us implement more cool features? Or just say thank you for the existing ones maybe ^^
+  </div>
+  <div class="button">
+    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="drosse" data-color="#22C55e" data-emoji=""  data-font="Cookie" data-text="Buy us a coffee" data-outline-color="#000000" data-font-color="#FFFFFF" data-coffee-color="#3a2516" ></script>
+  </div>
 </section>
 {% endblock hero %}
 
