--- a/frontend/src/styles/_variables.pcss
+++ b/frontend/src/styles/_variables.pcss
@@ -1,10 +1,10 @@
 :root {
-  --c-almost-white: rgb(230,230,230);
+  --c-white: rgb(255,255,255);
+  --c-almost-white: rgb(240,240,240);
   --c-blue: rgba(59,130,246);
   --c-gray: rgb(70,70,70);
   --c-gray-dark: rgb(35,35,35);
   --c-gray-darker: rgb(25,25,25);
-  --c-gray-light: rgb(240,240,240);
   --c-green: rgb(34,197,94);
   --c-green-dark: rgb(22,163,74);
   --c-indigo: rgb(99,102,241);
