--- a/frontend/src/styles/base.pcss
+++ b/frontend/src/styles/base.pcss
@@ -13,17 +13,18 @@ html {
     scroll-behavior: smooth;
 
     @media (--m) {
-        font-size: 17px;
+        font-size: 16px;
     }
 
     @media (--l) {
-        font-size: 19px;
+        font-size: 17px;
     }
 }
 
 body {
     position: relative;
     color: var(--c-gray-dark);
+    background: var(--c-almost-light);
 
     .dark & {
         color: var(--c-almost-white);
