--- a/frontend/src/styles/common.pcss
+++ b/frontend/src/styles/common.pcss
@@ -13,12 +13,12 @@ p > a {
 a.button {
     display: inline-flex;
     align-items: center;
-    padding: 1rem 1.5rem;
-    /* font-size: 0.9rem; */
+    padding: 0.75rem 1.25rem;
+    white-space: nowrap;
     font-weight: 600;
     color: white;
     background: var(--c-green);
-    border-radius: 0.35rem;
+    border-radius: 0.65rem;
 
     &:hover {
         text-decoration: none;
@@ -102,4 +102,8 @@ svg.fill-current {
     color: var(--c-green);
     border: 2px solid var(--c-green);
     border-radius: 0.375rem;
+}
+
+.secondary {
+    color: gray;
 }
