--- a/frontend/src/styles/footer.pcss
+++ b/frontend/src/styles/footer.pcss
@@ -1,5 +1,5 @@
 footer {
-    background: var(--c-gray-light);
+    background: var(--c-white);
 
     .dark & {
         background: var(--c-gray-darker);
@@ -10,7 +10,7 @@ footer {
         flex-direction: row;
         alig-items: center;
         padding: 3rem;
-        border-top: 1px dashed var(--c-green);
+        border-top: 1px dashed gray;
     }
 
     a {
@@ -20,7 +20,7 @@ footer {
             color: var(--c-gray);
 
             .dark & {
-                color: var(--c-gray-light);
+                color: var(--c-almost-light);
             }
         }
 
