--- a/frontend/src/styles/summary.pcss
+++ b/frontend/src/styles/summary.pcss
@@ -2,26 +2,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 2rem;
+  font-size: 0.9rem;
   padding-bottom: 4rem;
 
-  h2 {
-    margin: 0;
-    padding: 1rem 2rem 0;
-    text-align: center;
-    font-size: 1.3rem;
-    font-weight: 400;
+  @media (--l) {
+    flex-direction: row;
   }
 
-  & > div {
+  .actions {
+    min-width: 40%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+  }
 
-    @media (--l) {
-      flex-direction: row;
-    }
+  p {
+    padding: 0;
+    font-size: 0.95rem;
+  }
 
-    p {
-      padding: 0 3rem 1rem;
-    }
+  .button {
+    margin: 2rem 0;
   }
 }
