--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,5 +1,18 @@
 <header>
     <div class="container">
         <j-theme-switcher></j-theme-switcher>
+        <div class="support-us">
+            <p>
+                Want to help us implement more cool features?
+                <br>
+                <span class="secondary">
+                    Or just say thank you for the existing ones maybe ^^
+                </span>
+            </p>
+            <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+                data-name="bmc-button" data-slug="drosse" data-color="#FFDD00" data-emoji="" data-font="Cookie"
+                data-text="Buy us a coffee" data-outline-color="#000000" data-font-color="#000000"
+                data-coffee-color="#ffffff"></script>
+        </div>
     </div>
 </header>
