styles: fix color issues

--- a/frontend/src/styles/base.pcss
+++ b/frontend/src/styles/base.pcss
@@ -24,7 +24,7 @@ html {
 body {
     position: relative;
     color: var(--c-gray-dark);
-    background: var(--c-almost-light);
+    background: var(--c-almost-white);
 
     .dark & {
         color: var(--c-almost-white);
