--- a/frontend/src/styles/code-block.pcss
+++ b/frontend/src/styles/code-block.pcss
@@ -1,7 +1,7 @@
 .codeblock {
     position: relative;
     height: 2.2rem;
-    background: white;
+    background: var(--c-almost-white);
     padding: 1rem;
     margin: 2rem 0;
     border-radius: 0.25rem;
@@ -9,7 +9,7 @@
     overflow: auto;
 
     .dark & {
-        background: #2d2d2d;
+        background: var(--c-gray-dark);
     }
 
     &:before {
@@ -34,7 +34,7 @@
         background: white !important;
 
         .dark & {
-            background: #2d2d2d !important;
+            background: var(--c-gray-dark) !important;
         }
     }
 
