--- a/frontend/src/styles/footer.pcss
+++ b/frontend/src/styles/footer.pcss
@@ -20,7 +20,7 @@ footer {
             color: var(--c-gray);
 
             .dark & {
-                color: var(--c-almost-light);
+                color: var(--c-almost-white);
             }
         }
 
