--- a/frontend/src/styles/layout.pcss
+++ b/frontend/src/styles/layout.pcss
@@ -31,11 +31,9 @@ header {
 
 main {
     padding: 3rem;
-    background: var(--c-white);
-    box-shadow: 0 0 10rem rgba(0,0,0, 0.1);
+    background: white;
 
     .dark & {
         background: var(--c-gray-darker);
-        box-shadow: 0 0 10rem rgba(255,255,255, 0.1);
     }
 }
