style: fix opened code block background color

--- a/frontend/src/styles/code-block.pcss
+++ b/frontend/src/styles/code-block.pcss
@@ -31,7 +31,7 @@
         display: none;
         font-size: 0.8rem !important;
         white-space: pre !important;
-        background: white !important;
+        background: var(--c-almost-white) !important;
 
         .dark & {
             background: var(--c-gray-dark) !important;
